--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>McDonald's® India - Delivering Happiness to Your Doorstepk</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <nav id="navbar">
+            <div class="navbar-brand">
+                    <a href="index.html"></a>
+                    <img src="image/top logo.jpeg" alt="McDonald">
+            </div>
+            <div>
+               <ul class="navbar-items line">
+                    <li>
+                        <a href="#">Menu</a>
+                    </li>
+                    <li>
+                        <a href="#">Happy Meal</a>
+                    </li>
+                    <li>
+                        <a href="#">Restraunts</a>
+                    </li>
+                    <li>
+                        <a href="#">McDelivery</a>
+                    </li>
+                    <li>
+                        <a href="#">News</a>
+                    </li>
+                    <li>
+                        <a href="#">Birthday Party</a>
+                    </li>
+                </ul> 
+            </div>
+    </nav>
+    <section id="first">
+        <div class="container">
+            <div class="first-background">
+                <h1>bhdsvbuvc ouvd U</h1>
+            </div>
+            <div class="bg-1">
+              <!-- <img src="image/bg1.webp" alt="" height="720" width="813"> -->
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
