home nd navbar complete

--- a/index.html
+++ b/index.html
@@ -41,10 +41,34 @@
     <section id="first">
         <div class="container">
             <div class="first-background">
-                <h1>bhdsvbuvc ouvd U</h1>
+                <div class="first-background-text">
+                    <h1>Veg Surprise<br>
+                    Your favourite<br>
+                    is back!</h1>
+                </div>
+                    <div id="button">
+                        <a href="#">
+                            <button class="btn-left">
+                         <
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="btn-right">
+                 >
+            </button>
+        </a>
+                    </div>
+            </div>
+            <div class="sticks1">
+                <h1>           </h1>
+            </div>
+            <div class="sticks2">
+                <h1>           </h1>
             </div>
             <div class="bg-1">
               <!-- <img src="image/bg1.webp" alt="" height="720" width="813"> -->
+            <h1>          </h1>
+            </div>
             </div>
         </div>
     </section>
